GNOME Bugzilla – Bug 744188
fieldanalysis: exception when block width to 0
Last modified: 2015-04-20 08:43:36 UTC
When block width property is set to 0, exception occurs. This happens due to divide by zero errors in calculations. block width property can never be 0. Hence adjusting the minimum value to 1.
Created attachment 296409 [details] [review] fix exception when block width is 0
Seems sensible, pushed. Thanks for the patch. commit 3daa793494aa9ea41cd0f0ae5ed20275002e876c Author: Vineeth T M <vineeth.tm@samsung.com> Date: Mon Feb 9 11:29:46 2015 +0530 fieldanalysis: exception when block width to 0 When block width property is set to 0, exception occurs. This happens due to divide by zero errors in calculations. block width property can never be 0. Hence adjusting the minimum value to 1. https://bugzilla.gnome.org/show_bug.cgi?id=744188